8331606: [lworld] javac should consider some library classes as value classes
Reviewed-by: mcimadamore