@@ -308,6 +308,59 @@ class ValueObjectCompilationTests extends CompilationTestCase {
                     }
                 }
                 """);
+        assertFail("compiler.err.type.found.req", // --enable-preview -source"
+                """
+                class V {
+                    final Integer val = Integer.valueOf(42);
+                    void test() {
+                        synchronized (val) { // error
+                        }
+                    }
+                }
+                """);
+        String[] previousOptions = getCompileOptions();
+        try {
+            setCompileOptions(new String[] {});
+            assertOKWithWarning("compiler.warn.attempt.to.synchronize.on.instance.of.value.based.class", // empty options
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """);
+            setCompileOptions(new String[] {"--source",
+                    Integer.toString(Runtime.version().feature())});
+            assertOKWithWarning("compiler.warn.attempt.to.synchronize.on.instance.of.value.based.class", // --source
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """);
+            setCompileOptions(new String[] {"--enable-preview", "--source",
+                    Integer.toString(Runtime.version().feature())});
+            assertFail("compiler.err.type.found.req", // --enable-preview --source
+                    """
+                    class V {
+                        final Integer val = Integer.valueOf(42);
+                        void test() {
+                            synchronized (val) { // warn
+                            }
+                        }
+                    }
+                    """);
+            /* we should add tests for --release and --release --enable-preview once the stubs used for the latest
+             * release have been updated, right now they are the same as those for 22
+             */
+        } finally {
+            setCompileOptions(previousOptions);
+        }
     }
 
     @Test
